--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -22,3 +22,12 @@ jobs:
 
       - name: Run Python Script
         run: python cron/sample.py
+      - name: Commit and push updated model
+        run: |
+          git config --global user.email "github-actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add airquality.pkl
+          git commit -m "Update air quality model"
+          git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
