--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -30,4 +30,4 @@ jobs:
           git commit -m "Update air quality model"
           git push origin main
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.HUB_TOKEN }}
