--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -18,8 +18,7 @@ jobs:
           python-version: '3.10'  # Adjust as needed
 
       - name: Install Dependencies
-        run: pip install -r requirements.txt
-
+        run: pip install requests numpy pandas scikit-learn xgboost joblib schedule
       - name: Run Python Script
         run: python cron/sample.py
       - name: Commit and push updated model
