--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.10'  # Adjust as needed
+          python-version: '3.10'  
 
       - name: Install Dependencies
         run: pip install requests numpy pandas scikit-learn xgboost joblib schedule
