--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,7 @@ name: Run Daily Python Script
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs every day at midnight (UTC)
+    - cron: '0 0 * * *'  # Runs every day at midnight 
 
 jobs:
   run-script:
