--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -2,7 +2,10 @@ name: Run Daily Python Script
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs every day at midnight
+    - cron: '0 18 * * *'  # 12:00 AM IST (6:30 PM UTC previous day)
+    - cron: '30 0 * * *'  # 6:00 AM IST (12:30 AM UTC)
+    - cron: '30 6 * * *'  # 12:00 PM IST (6:30 AM UTC)
+    - cron: '30 12 * * *' # 6:00 PM IST (12:30 PM UTC)
 
 jobs:
   run-script:
