--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -38,6 +38,6 @@ jobs:
           git commit -m "Update air quality model"
           git add Backend/scaler.pkl
           git commit -m "Update scaler.pkl"
-          git push origin main
+          git push 
         env:
           GITHUB_TOKEN: ${{ secrets.HUB_TOKEN }}
