--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -34,10 +34,8 @@ jobs:
 
       - name: Commit and push updated model
         run: |
-          git add Backend/air_quality_model.pkl
-          git commit -m "Update air quality model"
-          git add Backend/scaler.pkl
-          git commit -m "Update scaler.pkl"
-          git push 
+          git add Backend/air_quality_model.pkl Backend/scaler.pkl
+          git commit -m "Update air quality model and scaler"
+          git push origin main
         env:
           GITHUB_TOKEN: ${{ secrets.HUB_TOKEN }}
